# ruminate

./: .gitignore  .gitmodules  .syntastic_cpp_config  CMakeLists.txt  Makefile  README.md  TODO  aggregate__member_8h.html  aggregate__member_8h.js  aggregate__type_8h.html  aggregate__type_8h.js  annotated.html  annotated.js  builtin__type_8h.html  builtin__type_8h.js  classes.html  dir_1229bae49d98528e082d5169ebe9d673.html  dir_1229bae49d98528e082d5169ebe9d673.js  errors_8h.html  errors_8h.js  files.html  files.js  frame_8h.html  frame_8h.js  functions.html  functions_func.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  (+100 more)
cmake/: FindIce.cmake
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  variables.mk
ice/: .gitignore  CMakeLists.txt  Makefile  debugee.ice  debugger.ice  debugger_factory.ice  exceptions.ice  frame.ice  type.ice  type_inspector.ice  type_list.ice  type_member.ice  variables.mk
ice/Ruminate/: __init__.py
include/: CMakeLists.txt  Makefile  config.h.in  ruminate.h  variables.mk
include/private/: aggregate_member.h  aggregate_type.h  array_type.h  builtin_type.h  command.h  common.h  enum_member.h  errors.h  frame.h  function_type.h  gettid.h  glib.h  ice.h  memory.h  pointer_type.h  protocol.h  rdebugger.h  record_member.h  record_type.h  ruminate.h  rumination.h  string.h  tag_type.h  type.h  type_member.h  typedef_type.h  value.h
include/private/lldb/: sbdebugger.h
include/ruminate/: CMakeLists.txt  Makefile  aggregate_member.h  aggregate_type.h  array_type.h  builtin_type.h  common.h  enum_member.h  errors.h  frame.h  function_type.h  init.h  memory.h  pointer_type.h  rdebugger.h  record_member.h  record_type.h  refptr.h  ruminate.h  rumination.h  string.h  tag_type.h  type.h  type_member.h  typedef_type.h  util.h  variables.mk
mk/: compile_flags.mk
python/: .gitignore  CMakeLists.txt  Makefile  debugger_factory_impl.py  debugger_impl.py  lldb_em.py  lldb_utils.py  ruminate-dbgsvr  ruminate-dbgsvr.in  setup.py  setup.py.in  type_impl.py  type_impl_factory.py  type_member_impl.py  variables.mk
search/: all_72.js  all_74.js  classes_72.js  defines_72.js  enums_72.js  enumvalues_72.js  files_61.js  files_62.js  files_72.js  files_74.js  functions_72.js  search.js
src/: .gitignore  CMakeLists.txt  Makefile  aggregate_member.cpp  aggregate_type.cpp  array_member_impl.py  array_type.cpp  attacher.py  builtin_type.cpp  common.cpp  controller.cpp  dbgsvr.py  debugger_factory_impl.py  debugger_impl.py  enum_member.cpp  errors.c  frame.cpp  function_type.cpp  gettid.c  init.c  init.cpp  lldb_em.py  lldb_utils.py  memory.cpp  pointer_type.cpp  protocol.cpp  rdebugger.cpp  record_member.cpp  record_type.cpp  refptr.c  ruminate.cpp  ruminate.pc.in  rumination.c  rumination.cpp  stopped_thread.py  string.cpp  tag_type.cpp  type.cpp  type_impl.py  type_impl_factory.py  (+7 more)
src/lldb/: sbdebugger.cpp
test/: CMakeLists.txt  Makefile  backtrace.c  file.c  json-lib-bijective.c  json-lib-test.c  json-lib.c  json-lib.h  json.c  main.c  opaque.c  ruminate.c  signal.c  struct_introspect.c  util.c  variables.mk  vla.c
test/backtrace/: CMakeLists.txt  backtrace.c  util.c
test/json/: CMakeLists.txt  json.c
test/main/: CMakeLists.txt  main.c
test/memory/: CMakeLists.txt  memory.c
test/ruminate-jansson-test/: CMakeLists.txt  ruminate-jansson-test.c
test/stdout/: CMakeLists.txt  stdout.c
util/: CMakeLists.txt  Makefile  json-lib-bijective.c  ruminate-jansson.c  ruminate-jansson.h  variables.mk
util/ruminate-jansson/: CMakeLists.txt  common.h  deserialize.c  json_state.c  ruminate-jansson.h  serialize.c
